syntax = "proto3";

package hello;

option go_package = ".;proto";

service User {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

// 开发者
message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
}